# utrains-cli

./: .env.example  .gitignore  INSTALL.md  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
packaging/: entry.py
tests/: test_smoke.py
utrains/: __init__.py  __main__.py  agent.py  cli.py  config.py  executor.py  fun.py  installer.py  mcp_client.py  memory.py  ollama_client.py  prompts.py  providers.py  system_info.py  tui.py  ui.py
