[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "utrains"
version = "0.1.2"
description = "A local, LLM-powered operations agent for your terminal (Ollama-backed)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "utrains" }]
dependencies = [
    "requests>=2.31",
    "psutil>=5.9",
    "textual>=0.60",
]

[project.optional-dependencies]
# Cloud model backends (only needed if you use claude-*/gpt-* models)
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
cloud = ["anthropic>=0.40", "openai>=1.40"]

[project.scripts]
utrains = "utrains.cli:main"

[tool.setuptools.packages.find]
include = ["utrains*"]